# pak

./: .gitignore  .pakignore  CLAUDE.md  Cargo.toml  README.md  abc.txt  checklist.md  cleanup-pak-server.sh  composer.json  go.mod  main.go  package-config-template.json  package.json  pak-sh.gemspec  pak-sh.json  pak-sh.nuspec  pak-sh.rb  pak.conf  setup.py
bash_central/: ascii-animate-colors.sh  ascii-setup.sh  ascii.sh  config.sh  defaults.sh  dependent.sh  functions.sh  grim-ascii.sh  human-validate.sh  input-validate.sh  install_common.tsk  logging.sh  mistro.sh
install/: README.md  deploy-templates.sh  install.sh  platform-configs.json  quick-install.sh  windows-install.md
install/templates/: cargo-deploy.sh  cocoapods-deploy.sh  conda-deploy.sh  deno-deploy.sh  gocenter-deploy.sh  gomodules-deploy.sh  gradle-deploy.sh  jcenter-deploy.sh  jitpack-deploy.sh  jspm-deploy.sh  jsr-deploy.sh  maven-deploy.sh  myget-deploy.sh  npm-deploy.sh  nuget-deploy.sh  packagist-deploy.sh  pear-deploy.sh  pecl-deploy.sh  poetry-deploy.sh  pypi-deploy.sh  rubygems-deploy.sh  swiftpm-deploy.sh  track-stats.sh  yarn-deploy.sh
pak/: ascii-letters.sh  pak.sh
pak/config/: .htaccess  analytics.conf  nginx-pak.sh.conf  pak.conf  pipelines.json  setup-pak.sh
pak/config/security/: dependency-policy.json  license-policy.json  owasp-policy.json
pak/data/pak-cache/: core.cache
pak/docs/: core-api.md  embed-demo.sh  registration-guide.md
pak/modules/: analytics.module.sh  automation.module.sh  collaboration.module.sh  core.module.sh  database.module.sh  deploy-orchestrator.module.sh  deploy.module.sh  deployment-validation.module.sh  devex.module.sh  embed.module.sh  enterprise.module.sh  integration.module.sh  lifecycle.module.sh  ml.module.sh  monitoring.module.sh  package-manager.module.sh  platform-adapters.module.sh  platform.module.sh  register.module.sh  rollback-recovery.module.sh  security.module.sh  track.module.sh  unified-build.module.sh
pak/scripts/: error-handler.sh  global-error-handler.sh  historical-data.sh  install.sh  ownership-verification.sh  package-config.sh  package-discovery.sh  performance-optimizer.sh  platform-health-check.sh
pak/templates/projects/python-cli/: pyproject.toml
pak/templates/projects/rust-wasm/: Cargo.toml
pak/tests/: core-tests.sh  test-register.sh
pak_finish/: core-fixer-a1-goals.json  core-fixer-a1-prompt.txt  core-fixer-a1-status.json  package-manager-a2-goals.json  package-manager-a2-prompt.txt  package-manager-a2-status.json  platform-builder-a3-goals.json  platform-builder-a3-prompt.txt  platform-builder-a3-status.json  security-devex-a4-goals.json  security-devex-a4-prompt.txt  security-devex-a4-status.json  web-api-a5-goals.json  web-api-a5-prompt.txt  web-api-a5-status.json
tests/: README.md  advanced-tests.sh  quick-test.sh  run-all-tests.sh  run-tests.sh  stress-tests.sh  test-all-commands.sh
tests/integration/: test-module-interactions.sh
tests/unit/: test-core-functions.sh
web_py/: .pakignore  PACKAGING_CONFIG.md  PAK_BRANDING_UPDATE.md  PAK_INTEGRATION.md  README.md  app.py  app_factory.py  config.py  deploy.py  models.py  pak.yaml  requirements.txt  run.py
web_py/blueprints/: admin.py  analytics.py  api.py  auth.py  dashboard.py  tsk.py  webhooks.py
web_py/services/: analytics_service.py  pak_service.py  webhook_service.py
web_py/templates/: 404.html  500.html  admin_users.html  auth.html  base.html  commands.html  credentials.html  dashboard.html  home.html  project_detail.html  projects.html  telemetry.html
wrappers/: Cargo.toml  INSTALL_README.md  PR_INSTRUCTIONS.md  build.sh  composer.json  deploy-report-20250723-152350.md  deploy-report-20250723-152456.md  deploy-report-20250723-152954.md  deploy-report-20250723-153016.md  deploy-report-20250723-153316.md  deploy-report-20250723-153423.md  deploy-report-20250723-153605.md  deploy-report-20250723-154226.md  deploy-report-20250723-154458.md  deploy-report-20250723-160059.md  deploy.sh  go.mod  package.json  pak-sh.gemspec  pak-sh.json  pak-sh.nuspec  pak-sh.rb  setup.py
(+42 files in other folders)
