[package]
name = "pak-sh"
version = "3.0.0"
edition = "2021"
authors = ["PAK.sh Team <team@pak.sh>"]
description = "PAK.sh - Universal Package Automation Kit Wrapper"
license = "MIT"
repository = "https://github.com/cyber-boost/pak"
homepage = "https://pak.sh"
documentation = "https://pak.sh/docs"
readme = "README.md"
keywords = [
    "pak",
    "package",
    "automation",
    "cli",
    "tool"
]
categories = [
    "command-line-utilities",
    "development-tools"
]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
tempfile = "3.0"
indicatif = "0.17"
console = "0.15"
colored = "2.0"

[dev-dependencies]
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "pak-sh"
path = "src/main.rs"

[[bin]]
name = "pak"
path = "src/main.rs"

[features]
default = []
dev = []
test = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.homebrew]
formula = "pak-sh"
tap = "pak/tap"

[package.metadata.chocolatey]
package = "pak-sh"
title = "PAK.sh Wrapper"
authors = "PAK.sh Team"
projectUrl = "https://pak.sh"
licenseUrl = "https://github.com/cyber-boost/pak/blob/main/LICENSE"
requireLicenseAcceptance = false
projectSourceUrl = "https://github.com/cyber-boost/pak"
docsUrl = "https://pak.sh/docs"
bugTrackerUrl = "https://github.com/cyber-boost/pak/issues"
tags = "pak package automation deployment cli tool"
summary = "PAK.sh - Universal Package Automation Kit Wrapper"
description = "Professional wrapper for PAK.sh installation and management via various package managers" 