[package]
name = "my-rust-wasm"
version = "1.0.0"
edition = "2021"
description = "A Rust WebAssembly package template"
license = "MIT"
repository = "https://github.com/username/my-rust-wasm"
keywords = ["wasm", "webassembly", "rust"]
categories = ["wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde-wasm-bindgen]
version = "0.5"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = false 